0023203: STEP import produces wrong surface of revolution on ellipse

Checking of XAsis for ellipses was added.
Adding test case for this fix